scenarios/istio-production/kiali-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - kiali.demo.lab
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 20001
            host: kiali.istio-system.svc.cluster.local
