scenarios/istio-production/prometheus-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - prometheus.demo.lab
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 9090
            host: prometheus-operated.monitoring.svc.cluster.local
